# StockVisionPro

./: .env  .env.production  package-lock.json  package.json  pyproject.toml  theme.json  vercel.json  vite.config.ts
attached_assets/: Pasted--Base-Theme-Variables-root-bg-primary-f9faff-bg-secondary-ffffff--1743944792803.txt  Pasted--tailwind-base-tailwind-components-tailwind-utilities-Base-Theme-Variables-ro-1744004776341.txt  Pasted-Below-is-a-comprehensive-list-of-your-app-s-features-along-with-detailed-UI-descriptions-for-each-se-1742639204651.txt  Pasted-Comprehensive-Prompt-Algorithmic-Trading-Software-with-AI-Driven-Predictions-and-Direct-Order-Execu-1743926751339.txt  Pasted-To-develop-your-AI-powered-trading-app-here-s-a-comprehensive-list-of-pages-and-features-to-guide-t-1742635402107.txt  Pasted-import-React-useState-useEffect-useCallback-useMemo-useRef-from-react-import-Set-1743944769487.txt  Pasted-import-React-useState-useEffect-useRef-useCallback-useMemo-from-react-Import-Font-Awe-1743951052419.txt  Pasted-import-React-useState-useRef-useEffect-from-react-import-Settings-Moon-Sun-Bell--1744004759982.txt
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  index.css
python_server/: .env  app.py  run.py
python_server/data/: __init__.py  storage.py
python_server/models/: __init__.py  schemas.py
python_server/routes/: __init__.py  ai_routes.py  auth_routes.py  chat_routes.py  notification_routes.py  portfolio_routes.py  stock_routes.py  (+3 more)
server/: index.ts  package.json  routes.ts  storage.ts  vite.ts
shared/: schema.ts
(+39 files in other folders)
